# pdf-docraptor-mini

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
html/: nofo.html
src/pdf_docraptor_mini/: main.py
